<resources>
    <string name="app_name">Si Gatto</string>
    <string name="gatto_intro">Hello, my name is Gatto</string>
    <string name="gatto_welcome">Welcome to the Si Gatto app. Here you will get information about one of the people who uses my photo as a profile picture, who is also my master, his name is Ryan, he also asked me to introduce himself to you. So, here we go...</string>
    <string name="btnProfile_label">Go To Profile</string>
    <string name="btnGithub_label">Go To My Github</string>
    <string name="my_nim">L0122114</string>
    <string name="my_name">Muhammad Ryan Fikri Fakhrezi</string>
    <string name="my_major_gen">Informatics batch of 2022</string>
    <string name="desc_label">Description</string>
    <string name="my_desc">Introducing my name is Muhammad Ryan Fikri Fakhrezi, you can call me Ryan. I come from Wonogiri and am currently studying computer science at Sebelas Maret University Surakarta. My favorite programming language is Java because I come from Java.</string>
    <string name="btnShare_label">Share</string>
    <string name="btnAnime_label">Watched Anime</string>
    <string name="anime_name">Anime\'s Name</string>
    <string name="description">Deskripsi</string>
    <string-array name="data_anime_name">
        <item>Angel Beats!</item>
        <item>Bocchi the Rock</item>
        <item>Classroom of the Elite</item>
        <item>Frieren Beyond Journey\'s End</item>
        <item>Golden Time</item>
        <item>Grand Blue Dreaming</item>
        <item>Horimiya</item>
        <item>Kaguya-sama - Love is War</item>
        <item>My Teen Romantic Comedy SNAFU</item>
        <item>No Game No Life</item>
        <item>Non Non Biyori</item>
        <item>Oshi No Ko</item>
        <item>Rascal Does Not Dream of Bunny Girl Senpai</item>
        <item>Spy x Family</item>
        <item>Sword Art Online</item>
        <item>The Quintessential Quintuplets</item>
    </string-array>
    <string-array name="data_anime_shortDesc">
        <item><![CDATA["Angel Beats!” is a poignant tale set in the afterlife, where Yuzuru Otonashi grapples with lost memories and battles alongside others to find peace before moving on.]]></item>
        <item><![CDATA["Bocchi the Rock!" follows socially anxious Hitori “Bocchi” Gotou as she overcomes her fears to join a band and perform live with her talented bandmates.]]></item>
        <item><![CDATA[Classroom of the Elite portrays Koudo Ikusei Senior High School’s deceptive utopia, where only the most superior students receive favorable treatment.]]></item>
        <item><![CDATA[Frieren: Beyond Journey’s End follows elven mage Frieren, a former hero’s party member, as she navigates her immortal life and seeks deeper connections with humans.]]></item>
        <item><![CDATA[Golden Time follows Banri Tada, who, after a tragic accident, loses his memories and embarks on a new life at law school in Tokyo, encountering love and growth along the way.]]></item>
        <item><![CDATA[Grand Blue follows Iori’s misadventures with his eccentric new friends as he strives to realize his ideal college dream, while also learning how to scuba dive.]]></item>
        <item><![CDATA[Horimiya portrays Kyouko Hori and Izumi Miyamura’s unexpected friendship, revealing their hidden selves beyond appearances.]]></item>
        <item><![CDATA[Kaguya-sama: Love Is War portrays two prideful geniuses who engage in over-the-top schemes to make the other confess their love, believing that the first to do so would “lose” in their relationship.]]></item>
        <item><![CDATA[My Teen Romantic Comedy SNAFU follows Hachiman Hikigaya, a cynical high school student forced into the Volunteer Service Club, where he navigates others’ problems with his unique perspective.]]></item>
        <item><![CDATA[No Game No Life revolves around Sora and Shiro, two genius hikikomori (shut-in) siblings who dominate the online gaming world as “Blank”, the undefeatable duo, and are challenged to an online chess match by an anonymous person.]]></item>
        <item><![CDATA[Non Non Biyori focuses on a group of students in a quiet countryside village, introducing the arrival of Ichijo Hotaru, a transfer student from Tokyo, who becomes the fifth student at the village school.]]></item>
        <item><![CDATA[Oshi no Ko follows a doctor and his recently deceased patient, reborn as twins to a famous Japanese pop idol, navigating the highs and lows of the entertainment industry.]]></item>
        <item><![CDATA[Rascal Does Not Dream of Bunny Girl Senpai follows Sakuta Azusagawa, who encounters a mysterious bunny girl during Golden Week, unraveling a tale of adolescence and intrigue.]]></item>
        <item><![CDATA[Spy × Family follows a spy who “builds a family” for a mission, unaware that his adopted daughter is a telepath and his wife-to-be is a skilled assassin.]]></item>
        <item><![CDATA[Sword Art Online follows Kirito, a powerful swordsman, and his friends trapped in a virtual reality MMORPG, fighting for their lives and seeking escape by beating the game.]]></item>
        <item><![CDATA[The Quintessential Quintuplets follows a high-school student hired as a tutor for identical quintuplets, navigating their academic struggles and unexpected bonds.]]></item>
    </string-array>
</resources>