<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10pt"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:text="@string/app_name"
        style="@style/Text.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gattoImage"
        style="@style/Image.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:srcCompat="@drawable/cat" />

    <TextView
        android:id="@+id/welcome"
        style="@style/Text.Header"
        android:layout_marginStart="131dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="132dp"
        android:text="@string/gatto_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gattoImage" />

    <TextView
        android:id="@+id/gattoIntroduction"
        style="@style/Text.Article"
        android:layout_width="265dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/gatto_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/btnProfile"
        style="@style/Button"
        android:text="@string/btnProfile_label"
        app:layout_constraintBottom_toTopOf="@+id/btnGithub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGithub"
        style="@style/Button"
        android:text="@string/btnGithub_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>